# SpiralsTrajactory

./: CMakeLists.txt  README.md  Readme.md  casatest.cpp  circleMPs.cpp  gnuplot_i.hpp  main.cpp
datavisual/: CMakeLists.txt
datavisual/include/: plot2d.hpp  plot3d.hpp
datavisual/src/: plot2d.cpp  plot3d.cpp
include/: common.h  directCollocationSolver.h
lib/: CMakeLists.txt
lib/include/: polytraj.h
lib/src/: miniEnergy.cpp  miniEnergy.h  params.h  path.cpp  path.h  polynomial.cpp  polynomial.h  shoot.h
matlab/: NelderMead.m  NelderMeadInt.m  NelderMeadIntLagrange.m  NelderMeadProblem.m  SimpsonFun.m  circle_Trajectory_cluster.m  clothiodCurvature.m  collocation_trajectory.m  direct_BVP.m  direct_Trajectory.m  newtonDescent.m  spiralPolyTrajectory.m  trajectory_generate.m
src/: directCollocationSolver.cpp
